fix: minor spacing fixes in the website

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -30,7 +30,8 @@ a:not(.btn-primary, .btn) {
   @apply no-underline;
 }
 
-p {
+p,
+li {
   @apply text-primary;
 }
 
@@ -66,7 +67,7 @@ main.page.about {
 
 .skillsRow {
   @apply flex flex-row items-center gap-2 md:gap-3 mb-4;
-  
+
   p {
     @apply text-sm md:text-base text-primary;
   }
